# python-project-49

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py  game_even.py  is_prime.py  maker_progression.py  maker_progressions.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
