[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Five games and required dependencies"
authors = ["Oleg <antoshinov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]
repository = 'https://github.com/Tanman515/python-project-49.git'
classifiers = ['Natural Language :: Russian', 
    'Operating System :: Microsoft :: Windows :: Windows 8.1',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: 3.11',
    'Topic :: Games/Entertainment :: Puzzle Games'
]


[tool.poetry.scripts]
brain-games = 'brain_games.scripts.brain_games:main'
brain-even = 'brain_games.scripts.brain_even:main'
brain-calc = 'brain_games.scripts.brain_calc:main'
brain-gcd = 'brain_games.scripts.brain_gcd:main'
brain-progression = 'brain_games.scripts.brain_progression:main'
brain-prime = 'brain_games.scripts.brain_prime:main'


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
